--- a/book.bib
+++ b/book.bib
@@ -394,3 +394,36 @@ Bioconductor},
     eprint = {https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.2307/1943563},
     year = {1960}
 }
+
+@article{Faith1992,
+    author = {Faith, D. P.},
+    title = {Conservation evaluation and phylogenetic diversity},
+    journal = {Biological Conservation},
+    volume = {61},
+    number = {1},
+    pages = {10},
+    doi = {https://doi.org/10.1016/0006-3207(92)91201-3},
+    url = {https://www.sciencedirect.com/science/article/pii/0006320792912013?via%3Dihub},
+    year = {1992}
+}
+
+@article{Kembel2010,
+    author = {Kembel Steven W and Cowan Peter D and Helmus Matthew R and Cornwell William K and Morlon Helene and Ackerly David D and Blomberg Simon P and Webb Campbell O},
+    title = {Picante: R tools for integrating phylogenies and ecology},
+    journal = {Bioinformatics},
+    volume = {26},
+    number = {11},
+    pages = {1463-1464},
+    doi = {https://doi.org/10.1093/bioinformatics/btq166},
+    url = {https://academic.oup.com/bioinformatics/article/26/11/1463/203321},
+    year = {2010}
+}
+
+@Manual{R-picante,
+    title = {Picante: R tools for integrating phylogenies and ecology},
+    author = {Steven W Kembel and Peter D Cowan and Matthew R Helmus and William K Cornwell and Helene Morlon and David D Ackerly and Simon P Blomberg and Campbell O Webb},
+    year = {2010},
+    note = {R package version 1.8.2},
+    url = {https://cran.r-project.org/web/packages/picante},
+}
+
