Added example on CSV data import

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -79,14 +79,36 @@ work with.
 ## Loading experimental microbiome data
 
 
-### Importing data 
+### Importing data from external files
 
+Microbiome (taxonomic) profiling data is commonly distributed in
+various file formats. You can import such external data files as a
+(Tree)SummarizedExperiment object but the details depend on the file
+format. Here, we provide examples for common formats.
 
-TODO: data importer from standard CSV/TSV/tree files directly into `TSE`?
+A specific import function is provided for QIIME2 files (see
+`help(mia::loadFromQIIME2)`).
 
-Alternative input file formats: data from QIIME2 file formats can be
-directly imported in `TreeSummarizedExperiment` format. See
-`help(mia::makeTreeSummarizedExperimentFromqiime2)` for examples.
+TODO: link to Mothur and other importers.
+
+**CSV data tables** can be imported with the standard R functions,
+  then converted to the desired format. For detailed examples, you can
+  check the [Bioconductor course
+  material](https://bioconductor.org/help/course-materials/2019/BSS2019/04_Practical_CoreApproachesInBioconductor.html)
+  by Martin Morgan. The following example reads abundance tables,
+  taxonomic mapping tables, and sample metadata, assuming that the
+  input data files are properly prepared with appropriate row and
+  column names.
+
+```{r importingcsv, message=FALSE, eval=FALSE}
+counts <- read.csv(count_file)   # Abundance table (e.g. ASV data; to assay data)
+tax <- read.csv(tax_file)        # Taxonomy table (to rowData)
+samples <- read.csv(sample_file) # Sample data (to colData)
+se <- SummarizedExperiment(assays = list(counts = counts),
+                           colData = samples,
+                           rowData = tax)
+```
+
 
 
 ### Conversions between data formats in R
