renaming of the repo to be inline with other books

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,11 @@
 --- 
-title: "Microbiome Analysis"
+title: "Orchestrating Microbiome Analysis"
 documentclass: book
 site: bookdown::bookdown_site
 bibliography: [book.bib]
 biblio-style: apalike
 link-citations: yes
-github-repo: microbiome/MiaBook
+github-repo: microbiome/OMA
 ---
 
 ```{r, echo=FALSE}
