fixes for upstream changes

--- a/14-microbiome-diversity.Rmd
+++ b/14-microbiome-diversity.Rmd
@@ -60,12 +60,12 @@ Alpha diversity can be estimated with wrapper functions that interact
 with other packages implementing the calculation, such as _`vegan`_
 [@R-vegan].
 
-The main function, `estimateAlphaDiversity`, calculates the selected
+The main function, `estimateDiversity`, calculates the selected
 diversity index based on the selected assay data and adds it to the
 `colData` of the `SummarizedExperiment` under the given column `name`.
 
 ```{r}
-se <- mia::estimateAlphaDiversity(se, abund_values = "counts",
+se <- mia::estimateDiversity(se, abund_values = "counts",
                              index = "shannon", name = "shannon")
 head(colData(se)$shannon)
 ```
@@ -82,7 +82,7 @@ plotColData(se, "shannon", "SampleType", colour_by = "SampleType") +
 All available indices will be calculated by default...
 
 ```{r}
-se <- estimateAlphaDiversity(se)
+se <- estimateDiversity(se)
 ```
 
 .. and a plot comparing them can then be constructed directly.
