added more tweaks due to upstream changes

--- a/14-microbiome-diversity.Rmd
+++ b/14-microbiome-diversity.Rmd
@@ -88,7 +88,7 @@ se <- estimateDiversity(se)
 .. and a plot comparing them can then be constructed directly.
 
 ```{r}
-plots <- lapply(c("shannon","simpson","inv_simpson", "richness", "chao1", "ACE"),
+plots <- lapply(c("shannon","gini_simpson","inverse_simpson", "coverage", "fisher"),
                 plotColData,
                 object = se,
                 x = "SampleType",
@@ -123,7 +123,7 @@ This entire process is wrapped in the `runMDS` and `runNMDS`
 functions.
 
 ```{r, message=FALSE}
-se <- runMDS2(se, FUN = vegan::vegdist, name = "MDS_BC")
+se <- runMDS(se, FUN = vegan::vegdist, name = "MDS_BC", exprs_values = "counts")
 ```
 
 Sample similarities can be visualized on a lower-dimensional display
@@ -140,8 +140,8 @@ performed informing on the applicability to visualize sample similarities in a
 meaningful way.
 
 ```{r plot-mds-nmds-comparison, fig.cap="Comparison of MDS and NMDS plots based on the Bray-Curtis or euclidean distances on the GlobalPattern dataset.", message=FALSE}
-se <- runMDS2(se, FUN = vegan::vegdist, name = "MDS_euclidean",
-             method = "euclidean")
+se <- runMDS(se, FUN = vegan::vegdist, name = "MDS_euclidean",
+             method = "euclidean", exprs_values = "counts")
 se <- runNMDS(se, FUN = vegan::vegdist, name = "NMDS_BC")
 se <- runNMDS(se, FUN = vegan::vegdist, name = "NMDS_euclidean",
               method = "euclidean")
@@ -158,9 +158,10 @@ used within `runMDS`.
 
 
 ```{r}
-se <- runMDS2(se, FUN = calculateUniFrac, name = "UniFrac",
-              tree = rowTree(se),
-              ntop = nrow(se))
+se <- runMDS(se, FUN = calculateUniFrac, name = "UniFrac",
+             tree = rowTree(se),
+             ntop = nrow(se),
+             exprs_values = "counts")
 ```
 
 ```{r plot-unifrac, fig.cap="UniFrac distances scaled by MDS of the GlobalPattern dataset."}
