--- a/book.bib
+++ b/book.bib
@@ -427,3 +427,25 @@ Bioconductor},
     url = {https://cran.r-project.org/web/packages/picante},
 }
 
+@article{Chao1992,
+    author = {Chao A and Lee SM},
+    title = {Estimating the number of classes via sample coverage},
+    journal = {Journal of the American statistical Association},
+    volume = {87},
+    number = {417},
+    pages = {210-217},
+    doi = {https://doi.org/10.1080/01621459.1992.10475194},
+    url = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1992.10475194#.YHFw5egzaHu},
+    year = {1992}
+}
+
+@article{Chao1984,
+    author = {Chao A},
+    title = {Non-parametric estimation of the number of classes in a population},
+    journal = {Scandinavian Journal of Statistics},
+    volume = {11},
+    number = {4},
+    pages = {265-270},
+    url = {https://www.jstor.org/stable/4615964},
+    year = {1984}
+}
