phylo-div section added (#14)
* phylo-div section added

--- a/book.bib
+++ b/book.bib
@@ -394,3 +394,58 @@ Bioconductor},
     eprint = {https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.2307/1943563},
     year = {1960}
 }
+
+@article{Faith1992,
+    author = {Faith, D. P.},
+    title = {Conservation evaluation and phylogenetic diversity},
+    journal = {Biological Conservation},
+    volume = {61},
+    number = {1},
+    pages = {10},
+    doi = {https://doi.org/10.1016/0006-3207(92)91201-3},
+    url = {https://www.sciencedirect.com/science/article/pii/0006320792912013?via%3Dihub},
+    year = {1992}
+}
+
+@article{Kembel2010,
+    author = {Kembel Steven W and Cowan Peter D and Helmus Matthew R and Cornwell William K and Morlon Helene and Ackerly David D and Blomberg Simon P and Webb Campbell O},
+    title = {Picante: R tools for integrating phylogenies and ecology},
+    journal = {Bioinformatics},
+    volume = {26},
+    number = {11},
+    pages = {1463-1464},
+    doi = {https://doi.org/10.1093/bioinformatics/btq166},
+    url = {https://academic.oup.com/bioinformatics/article/26/11/1463/203321},
+    year = {2010}
+}
+
+@Manual{R-picante,
+    title = {Picante: R tools for integrating phylogenies and ecology},
+    author = {Steven W Kembel and Peter D Cowan and Matthew R Helmus and William K Cornwell and Helene Morlon and David D Ackerly and Simon P Blomberg and Campbell O Webb},
+    year = {2010},
+    note = {R package version 1.8.2},
+    url = {https://cran.r-project.org/web/packages/picante},
+}
+
+@article{Chao1992,
+    author = {Chao A and Lee SM},
+    title = {Estimating the number of classes via sample coverage},
+    journal = {Journal of the American statistical Association},
+    volume = {87},
+    number = {417},
+    pages = {210-217},
+    doi = {https://doi.org/10.1080/01621459.1992.10475194},
+    url = {https://amstat.tandfonline.com/doi/abs/10.1080/01621459.1992.10475194#.YHFw5egzaHu},
+    year = {1992}
+}
+
+@article{Chao1984,
+    author = {Chao A},
+    title = {Non-parametric estimation of the number of classes in a population},
+    journal = {Scandinavian Journal of Statistics},
+    volume = {11},
+    number = {4},
+    pages = {265-270},
+    url = {https://www.jstor.org/stable/4615964},
+    year = {1984}
+}
