--- a/14-microbiome-diversity.Rmd
+++ b/14-microbiome-diversity.Rmd
@@ -15,7 +15,7 @@ Many different ways for estimating such diversity measurements have been
 described in the literature. Which measurement is best or applicable for your 
 samples, is not the aim of the following sections.
 
-```{r}
+```{r load-pkg-data}
 library(mia)
 data("GlobalPatterns")
 se <- GlobalPatterns
@@ -40,8 +40,15 @@ to be variants of alpha diversity.
 species (observed richness). Assuming limited sampling from the
 community, however, this may underestimate the true species
 richness. Several estimators are available, including for instance ACE
-[@reference] and Chao1 [@reference]. Richness estimates are unaffected
+[@Chao1992] and Chao1 [@Chao1984]. Richness estimates are unaffected
 by species abundances.
+  
+**Phylogenetic diversity** was first proposed by [@Faith1992], unlike the 
+  diversity measures mentioned above, Phylogenetic diversity (PD) 
+  measure incorporates information from phylogenetic relationships 
+  stored in `phylo` tree between species in a community (sample). The 
+  Faith's PD is calculated as the sum of branch length of all species in 
+  a community (sample).
 
 **Evenness** focuses on species abundances, and can thus complement
   the number of species. A typical evenness index is the Pielou's
@@ -51,44 +58,106 @@ by species abundances.
 **Dominance** indices are in general negatively correlated with
   diversity, and sometimes used in ecological literature. High
   dominance is obtained when one or few species have a high share of
-  the total species abundance in the community.
-
-
+  the total species abundance in the community.  
+  
 ### Estimating alpha diversity
 
 Alpha diversity can be estimated with wrapper functions that interact
 with other packages implementing the calculation, such as _`vegan`_
 [@R-vegan].
 
-The main function, `estimateDiversity`, calculates the selected
-diversity index based on the selected assay data and adds it to the
-`colData` of the `SummarizedExperiment` under the given column `name`.
+#### Richness  
+
+Richness gives the number of features present within a community and can be calculated with `estimateRichness`. Each of the estimate diversity/richness/evenness/dominance functions adds the calculated measure(s) to the `colData` of the `SummarizedExperiment` under the given column `name`. Here, we calculate `observed` features as a measure of richness.     
 
 ```{r}
-se <- mia::estimateDiversity(se, abund_values = "counts",
-                             index = "shannon", name = "shannon")
-head(colData(se)$shannon)
-```
+se <- mia::estimateRichness(se, 
+                       abund_values = "counts", 
+                       index = "observed", 
+                       name="observed")
 
-This allows the values to analyzed directly from the `colData`, for example
+head(colData(se)$observed)
+```
+This allows access to the values to be analyzed directly from the `colData`, for example
 by plotting them using `plotColData` from the _`scater`_ package [@R-scater].
 
 ```{r plot-div-shannon, message=FALSE, fig.cap="Shannon diversity estimates plotted grouped by sample type."}
 library(scater)
-plotColData(se, "shannon", "SampleType", colour_by = "SampleType") +
-    theme(axis.text.x = element_text(angle=45,hjust=1))
+plotColData(se, 
+            "observed", 
+            "SampleType", 
+            colour_by = "SampleType") +
+    theme(axis.text.x = element_text(angle=45,hjust=1)) + 
+  ylab(expression(Richness[Observed]))
+
 ```
 
-All available indices will be calculated by default...
+#### Diversity  
 
-```{r}
-se <- estimateDiversity(se)
+**Non-Phylogenetic measures**  
+The main function, `estimateDiversity`, calculates the selected
+diversity index based on the selected assay data.  
+
+```{r estimate-shannon}
+se <- mia::estimateDiversity(se, 
+                             abund_values = "counts",
+                             index = "shannon", 
+                             name = "shannon")
+head(colData(se)$shannon)
 ```
 
-.. and a plot comparing them can then be constructed directly.
+**Phylogenetic diversity**  
 
+The phylogenetic diversity is calculated by `mia::estimateDiversity`. This is a faster re-implementation of   
+the widely function in _`picante`_ [@R-picante, @Kembel2010].  
+
+Load `picante` R package and get the `phylo` stored in `rowTree`. 
+```{r phylo-div-1}
+
+se <- mia::estimateDiversity(se, 
+                             abund_values = "counts",
+                             index = "faith", 
+                             name = "faith")
+head(colData(se)$faith)
+
+```
+
+#### Evenness  
+
+Evenness can be calculated with `estimateEvenness`.  
+
+```{r evenness-1}
+se <- estimateEvenness(se, 
+                       abund_values = "counts", 
+                       index="simpson")
+head(colData(se)$simpson)
+```
+
+
+#### Dominance  
+
+Dominance can be calculated with `estimateDominance`. Here, the `Relative index` is calculated which is the relative abundance of the most dominant species in the sample.   
+
+```{r dominance-1}
+se <- estimateDominance(se, 
+                       abund_values = "counts", 
+                       index="relative")
+
+head(colData(se)$relative)
+```
+
+#### Rarity  
+TODO...
 ```{r}
-plots <- lapply(c("shannon","gini_simpson","inverse_simpson", "coverage", "fisher"),
+
+```
+
+
+### Visualize alpha diversities  
+
+A plot comparing all the diversity measures calculated above and stored in `colData` can then be constructed directly.  
+```{r plot-all-diversities}
+plots <- lapply(c("observed", "shannon","simpson", "relative", "faith"),
                 plotColData,
                 object = se,
                 x = "SampleType",
@@ -96,6 +165,7 @@ plots <- lapply(c("shannon","gini_simpson","inverse_simpson", "coverage", "fishe
 plots <- lapply(plots,"+", theme(axis.text.x = element_text(angle=45,hjust=1)))
 ggpubr::ggarrange(plotlist = plots, nrow = 2, ncol = 3, common.legend = TRUE, legend = "right")
 ```
+
 
 ## Beta diversity
 
@@ -204,10 +274,9 @@ ggplot(aes(x = d0, y = dmds), data=df) +
        labs(title = "Shepard plot",
        x = "Original distance",
        y = "MDS distance",       
-            subtitle = paste("Stress:", round(stress, 2)))
+            subtitle = paste("Stress:", round(stress, 2))) +
+  theme_bw()
 ```
-
-
 
 
 ### Estimating beta diversity
@@ -392,8 +461,8 @@ ggplot(data.frame(x = top.coef,
 ```
 
 In the above example, the largest differences between the two groups
-can be attributed to Bacteroides intestinalis (elevated in the first
-group) and Faecalibacterium prausnitzii (elevated in the second
+can be attributed to _Bacteroides intestinalis_ (elevated in the first
+group) and _Faecalibacterium prausnitzii_ (elevated in the second
 group), and many other co-varying species.
 
 
@@ -410,13 +479,13 @@ anova(vegan::betadisper(attr(reducedDim(se.lahti,"BC"),"dist"),
                         colData(se.lahti)$group))
 ```
 
-In our example, the groups have similar dispersions, and PERMANOVA is
+In our example, the groups have similar dispersion, and PERMANOVA is
 an appropriate choice for comparing community compositions.
 
 
 ## Further reading
 
-In certain settings beta diversities might be used to group samples without
+In certain settings, beta diversities might be used to group samples without
 prior knowledge. For this we want to point to excellent resources on 
 [how to extract information from the clusters](http://bioconductor.org/books/release/OSCA/clustering.html).
 
