added some material on class explanations

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -6,9 +6,21 @@
 library(rebook)
 chapterPreamble()
 ```
+TreeSummarizedExperiment works as a container of different kind of information that is 
+obtained from the data set. Similarly, e.g., to **phyloseq** class, TreeSummarizedExperiment 
+includes standardized slots. Each of this classes can store specific kind of information. For example,
+assays can store abundance tables, and rowData information about taxa.
+The main advantage of TreeSummarizedExperiment compared to phyloseq is that it can store
+lots of more data than phyloseq. **TreeSummarizedExperiment**. It extends
+**SingleCellExperiment** class by providing slots for phylogenetic
+tree and sample tree.
 
-The
-[`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)
+Currently miaverse includes two packages: one for data analysis and one for visualization. 
+**mia** package includes wide variety of different kind of functions for data analysis. 
+**miaViz** is the package for visualization. The aim is to enable easy, reliable, and efficient 
+way to analyze microbiome data. 
+
+The [`SummarizedExperiment`](https://bioconductor.org/packages/release/bioc/html/SummarizedExperiment.html)
 (`SE`) is a widely used class for analyzing data obtained by common sequencing
 techniques. `SE` is common structure for several Bioconductor packages that are
 used for analyzing RNAseq, ChIp-Seq data. `SE` class is also used in R packages
@@ -20,10 +32,7 @@ class](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperi
 alternative experiments. Alternative experiments (`altExps`) can be differently
 processed data within the analysis workflows.
 
-Recently,
-[`TreeSummarizedExperiment`](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html)
-(`TSE`)
-were developed to extend the `SE` and `SCE` class for incorporating hierarchical
+Recently, [`TreeSummarizedExperiment`](https://www.bioconductor.org/packages/release/bioc/html/TreeSummarizedExperiment.html) (`TSE`) were developed to extend the `SE` and `SCE` class for incorporating hierarchical
 information (including phylogenetic tree) and reference sequences.
 
 The `mia` package implements tools using these classes for analysis of
