--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -157,7 +157,7 @@ se
 
 ### Assays  
 
-The `assays` slots contains the experimental data as count matrices. Multiple 
+The `assays` slot contains the experimental data as count matrices. Multiple 
 matrices can be stored the result of `assays` is actually a list of matrices.
 
 ```{r}
