--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -139,8 +139,10 @@ Now we can load the biom data into a SummarizedExperiment (SE) object.
 ```{r}
 library(mia)
 
+# Imports the data
 se <- loadFromBiom(biom_file_path)
 
+# Check
 se
 ```  
 
@@ -244,6 +246,7 @@ tse
 Next, let us read the tree data file and add it to the R data object (tse).
 
 ```{r}
+# Reads the tree file
 tree <- ape::read.tree(tree_file_path)
 
 # Add tree to rowTree
