Added illustrative figure about TSE

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -74,7 +74,20 @@ In this book, you will come across terms like `FeatureIDs` and `SampleIDs`.
 `colnames` are encouraged to be used, since they relate to actual objects we 
 work with.
 
+<img src="https://raw.githubusercontent.com/FelixErnst/TreeSummarizedExperiment
+/2293440c6e70ae4d6e978b6fdf2c42fdea7fb36a/vignettes/tse2.png" width="100%"/>
 
+**Figure sources:** 
+
+**Original article**
+-   Huang R _et al_. (2021) [TreeSummarizedExperiment: a S4 class 
+for data with hierarchical structure](https://doi.org/10.12688/
+f1000research.26669.2). F1000Research 9:1246.
+
+**Reference Sequence slot extension**
+- Lahti L _et al_. (2020) [Upgrading the R/Bioconductor ecosystem for microbiome 
+research](https://doi.org/10.7490/
+f1000research.1118447.1) F1000Research 9:1464 (slides).
 
 ## Loading experimental microbiome data
 
