--- a/15-microbiome-community.Rmd
+++ b/15-microbiome-community.Rmd
@@ -14,8 +14,117 @@ Heatmaps
 
 ## Community typing
 
-- Community State Types (CST)
-- Dirichlet Multinomial Mixtures (DMM)
+### Dirichlet Multinomial Mixtures (DMM)
+
+This section focus on DMM analysis. 
+
+One technique that allows to search for groups of samples that are
+similar to each other is the [Dirichlet-Multinomial Mixture
+Model](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0030126). In
+DMM, we first determine the number of clusters (k) that best fit the
+data (model evidence) using Laplace approximation. After fitting the
+model with k clusters, we obtain for each sample k probabilities that
+reflect the probability that a sample belongs to the given cluster.
+
+Let's cluster the data with DMM clustering. 
+
+```{r dmm}
+# Runs model and calculates the most likely number of clusters from 1 to 7. 
+# For this small data, takes about 10 seconds. For larger data, can take much longer
+# because this demands lots of resources. 
+tse_dmn <- runDMN(tse, name = "DMN", k = 1:7)
+```
+
+```{r}
+# It is stored in metadata
+tse_dmn
+```
+
+Return information on metadata that the object contains.
+
+```{r}
+names(metadata(tse_dmn))
+```
+
+This returns a list of DMN objects for a closer investigation.
+
+```{r}
+getDMN(tse_dmn)
+```
+
+
+Show Laplace approximation (model evidence) for each model of the k models.
+
+```{r}
+plotDMNFit(tse_dmn, type = "laplace")
+```
+
+Return the model that has the best fit.
+
+```{r}
+getBestDMNFit(tse_dmn, type = "laplace")
+```
+### PCoA for ASV-level data with Bray-Curtis; with DMM clusters shown with colors
+
+Group samples and return DMNGroup object that contains a summary.
+Patient status is used for grouping.
+
+```{r}
+dmn_group <- calculateDMNgroup(tse_dmn, variable = "patient_status", 
+                             exprs_values = "counts", k = 3)
+
+dmn_group
+```
+
+Mixture weights  (rough measure of the cluster size).
+
+
+```{r}
+DirichletMultinomial::mixturewt(getBestDMNFit(tse_dmn))
+```
+
+
+Samples-cluster assignment probabilities / how probable it is that sample belongs
+to each cluster
+
+```{r}
+head(DirichletMultinomial::mixture(getBestDMNFit(tse_dmn)))
+```
+
+Contribution of each taxa to each component
+
+```{r}
+head(DirichletMultinomial::fitted(getBestDMNFit(tse_dmn)))
+```
+
+Get the assignment probabilities
+
+```{r}
+prob <- DirichletMultinomial::mixture(getBestDMNFit(tse_dmn))
+# Add column names
+colnames(prob) <- c("comp1", "comp2", "comp3")
+
+# For each row, finds column that has the highest value. Then extract the column 
+# names of highest values.
+vec <- colnames(prob)[max.col(prob,ties.method = "first")]
+
+# Creates a data frame that contains principal coordinates and DMM information
+euclidean_dmm_pcoa_df <- cbind(euclidean_pcoa_df,
+                               dmm_component = vec)
+
+# Creates a plot
+euclidean_dmm_plot <- ggplot(data = euclidean_dmm_pcoa_df, 
+                             aes(x=pcoa1, y=pcoa2,
+                                 color = dmm_component)) +
+  geom_point() +
+  labs(x = "Coordinate 1",
+       y = "Coordinate 2",
+       title = "PCoA with Aitchison distances") +  
+  theme(title = element_text(size = 12)) # makes titles smaller
+
+euclidean_dmm_plot
+```
+
 
 ## Session Info {-}
 
